--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .iconstyle {
+      @apply w-7 h-7 hover:text-ground/65 transition-all duration-300 hover:scale-105;
+    }
+  }
